# build-system

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: tests.yml
app/: constants.py  exception_handlers.py  main.py  test_main.py
app/builds/: exceptions.py  file_manager.py  models.py  router.py  service.py  typings.py
src/: main.py
src/builds/: router.py  service.py
static/: builds.yaml  tasks.yaml
