[tool.poetry]
name = "build-system"
version = "0.1.0"
description = ""
authors = ["Yakser <iaksanov2044@mail.ru>"]
readme = "README.md"
packages = [{include = "build_system"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pyyaml = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
