[tool.poetry]
name = "build-system"
version = "0.1.0"
description = ""
authors = ["Yakser <iaksanov2044@mail.ru>"]
readme = "README.md"
packages = [{include = "build_system"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.100.0"}
pytest = "^7.4.0"
pre-commit = "^3.3.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
